Сообщение при изменении Типа Номенклатуры

--- a/1С_Демо_Адаптация_под_клиента_Альфа.АдаптацияФункциональности/src/Catalogs/Номенклатура/Forms/ФормаЭлемента/Form.form
+++ b/1С_Демо_Адаптация_под_клиента_Альфа.АдаптацияФункциональности/src/Catalogs/Номенклатура/Forms/ФормаЭлемента/Form.form
@@ -170,6 +170,11 @@
       </paths>
     </dataPath>
     <titleLocation>None</titleLocation>
+    <handlers xsi:type="form:EventHandlerExtension">
+      <event>OnChange</event>
+      <name>АФ_ЭтоТоварПриИзмененииПосле</name>
+      <callType>After</callType>
+    </handlers>
     <extendedTooltip>
       <name>ЭтоТоварРасширеннаяПодсказка</name>
       <id>12</id>
